# market_analysis

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  ecs-task-definition.json  env.example  pyproject.toml  requirements.txt
src/ingest/: adzuna.py  adzuna_api_configs.py
src/job_pipeline/: cli.py  config.py  logging_conf.py  pipeline.py  secrets.py
src/job_pipeline/steps/: io_utils.py
src/job_pipeline/steps/ingest/: adzuna.py  adzuna_api_configs.py
src/job_pipeline/steps/transform/: add_full_description.py  add_home_url.py
src/utils/: add_full_description.py  add_home_url.py  clean_data_output.py  clean_url.py
tests/: conftest.py
tests/ingest/: test_adzuna.py
